examples/gallery/errors/forbidden_op_accepted.fsl
// expected-command: check
// expected-result: error
// expected-kind: forbidden
// `forbidden` error example. Because cancel's guard also allows Shipped (under-constraint),
// "cancel after shipping" is accepted and forbidden is violated. Where a safety invariant
// would stay silent and report verified, the negative trace detects it at check time.
requirements ForbiddenOpAccepted {
  type OrderId = 0..1
  enum OSt { Cart, Paid, Shipped, Cancelled }
  state { order: Map<OrderId, OSt> }
  init { forall o: OrderId { order[o] = Cart } }

  requirement REQ-1 "Order lifecycle (weakened guard)" {
    action pay(o: OrderId)    { requires order[o] == Cart  order[o] = Paid }
    action ship(o: OrderId)   { requires order[o] == Paid  order[o] = Shipped }
    action cancel(o: OrderId) { requires order[o] == Paid or order[o] == Shipped  order[o] = Cancelled }
  }

  forbidden FB-1 "Cancellation after shipping is rejected" {
    pay(0)  ship(0)
    cancel(0)
    expect rejected
  }
}
